test/corpus/test.txt
===
the one
===
bye  
hello
    ""
hello
    'a' 'a' . 'b' - '1000' - 'a' - 'c' 'a' 'a'

    

hello   ; hello

hello;
hello
    ;
    
hello
    ""

---
(grammar
      (rule
        (name))
      (rule
        (name)
        (nothing))
      (rule
        (name)
        (literal
          (singleton))
        (literal
          (range
            (singleton)
            (singleton))
          (exclude
            (singleton))
          (exclude
            (singleton))
          (exclude
            (singleton)))
        (literal
          (singleton))
        (literal
          (singleton)))
      (rule
        (name)
        (comment))
      (rule
        (name)
        (comment))
      (rule
        (name))
      (comment)
      (rule
        (name)
        (nothing)))